# magnetic

./: Cargo.toml  LICENSE  README.md
benches/: mpmc.rs  mpsc.rs  spmc.rs  spsc.rs
src/: lib.rs  mpmc.rs  mpsc.rs  spmc.rs  spsc.rs  util.rs
src/buffer/: array.rs  dynamic.rs  mod.rs  static.rs
