[package]
name = "magnetic"
description = "Low-latency lock-free queues"
version = "2.2.0"
authors = ["John Shaw <jshaw@shawnation.com>"]
license = "MIT"
repository = "https://github.com/johnshaw/magnetic"
keywords = ["lock-free", "queue"]
documentation = "http://johnshaw.github.io/magnetic/doc/magnetic"
edition = "2018"

[features]
unstable = []

[dependencies]
crossbeam-utils = "0.8"

[dev-dependencies]
num_cpus = "1"
criterion = "0.3"

[[bench]]
name = "spsc"
harness = false

[[bench]]
name = "spmc"
harness = false

[[bench]]
name = "mpsc"
harness = false

[[bench]]
name = "mpmc"
harness = false