[package]
authors = ["John Shaw <jshaw@shawnation.com>"]
description = "Low-latency lock-free queues"
documentation = "http://johnshaw.github.io/magnetic/doc/magnetic"
edition = "2021"
keywords = ["lock-free", "queue"]
license = "MIT"
name = "magnetic"
repository = "https://github.com/johnshaw/magnetic"
version = "2.3.0"

[features]
unstable = []

[dependencies]
crossbeam-utils = "0.8"

[dev-dependencies]
criterion = "0.3"
num_cpus = "1"

[[bench]]
harness = false
name = "spsc"

[[bench]]
harness = false
name = "spmc"

[[bench]]
harness = false
name = "mpsc"

[[bench]]
harness = false
name = "mpmc"
