[package]
authors = ["John Shaw <jshaw@shawnation.com>"]
categories = ["concurrency", "data-structures"]
description = "Low-latency lock-free queues"
documentation = "https://docs.rs/magnetic"
edition = "2021"
homepage = "https://github.com/johnshaw/magnetic"
include = ["**/*.rs", "Cargo.toml", "LICENSE"]
keywords = ["lock-free", "queue", "fifo"]
license = "MIT"
name = "magnetic"
readme = "README.md"
repository = "https://github.com/johnshaw/magnetic"
version = "2.4.1"

[dependencies]
crossbeam-utils = "0.8"

[dev-dependencies]
criterion = "0.3"
num_cpus = "1"

[[bench]]
harness = false
name = "spsc"

[[bench]]
harness = false
name = "spmc"

[[bench]]
harness = false
name = "mpsc"

[[bench]]
harness = false
name = "mpmc"
